# cnf

./: .gitignore  ABOUT.md  AGENTS.md  AboutMe.md  CLAUDE.md  GLOSSARY.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  brand.json  prd.json
.github/: .gitignore  CODEOWNERS  FUNDING.yml  WORKFLOWS.md  dependabot.yml
.github/security-audit/: README.md
.github/workflows/: accessibility.yml  auto-index.yml  publish.yml  qa.yml  security-audit.yml  security.yml  sync-brand.yml  tests.yml  validate-docs.yml  wiki-sync.yml
MAIN/: ACADEMIC_LANDSCAPE.md  INDEX.md  PARTNERSHIPS.md  README.md  RELATED_WORK.md
MAIN/governance/: ACCESSIBILITY.md  (+4 more)
ai-working/: BCI-POC-BUILD-GUIDE.md  BRAND-STRATEGY.md  NSP-VISUAL-PROTOCOL-RESEARCH.md  PITCH-ADDITIONS.md  PROPAGATION.md  QI-EQUATION-RESEARCH.md  QI-FIELDJOURNAL.md  QIF-DERIVATION-LOG.md  QIF-FIELD-NOTES.md  QIF-NARRATIVE.md  QIF-TRUTH.md  QIF-WHITEPAPER.md  QIF-WIKI.md  RUNEMATE.md
autodidact/: README.md  pyproject.toml
docs/: SIGNAL_VISUALIZATION_DESIGN.md  WHY_WAVES_ARE_CIRCLES.md  content-manifest.json  index.html
neuroscience-homework-todo/: README.md
neurosec-research/: README.md
neurosecurity/: README.md
neurosecurity-framework/: README.md
oni-demo-video/: README.md  package-lock.json  package.json
scripts/: sync_brand.py
security-audit-pipeline/: README.md
tools/qif-framework/: CHANGELOG.md  README.md  pyproject.toml
tools/qif-framework/qif/: __init__.py  bands.py  coherence.py  firewall.py  model.py  scale_freq.py
tools/qif-framework/tests/: test_coherence.py  test_model.py  test_scale_freq.py
(+254 files in other folders)
